@@ -28,4 +28,15 @@ leader_traits = {
 		tax_gain_multiplier_modifier = 0.05
 		stability_factor = -0.05
 	}
+
+	hand_chosen_successor = {
+		random = no
+
+		communism_drift = 0.04
+		stability_factor = 0.05
+
+		ai_will_do = {
+			factor = 1
+		}
+	}
 }
