@@ -305,7 +305,7 @@ arab_spring_category = {
 			log = "[GetDateText]: [This.GetName]: decision arab_spring_protests_1 timeout executed"
 			clr_country_flag = arab_spring_active
 			if = { limit = { check_variable = { arab_spring > 65 } }
-				country_event = { id = arab_spring.11 }
+				country_event = { id = arab_spring.11 random_days = 7 random_hours = 18 }
 			}
 			else = {
 				add_political_power = -150
@@ -348,11 +348,11 @@ arab_spring_category = {
 			log = "[GetDateText]: [This.GetName]: decision arab_spring_protests_2 timeout executed"
 			clr_country_flag = arab_spring_active
 			if = { limit = { check_variable = { arab_spring > 99 } }
-				country_event = { id = arab_spring.11 }
+				country_event = { id = arab_spring.11 random_days = 7 random_hours = 18 }
 			}
 			else = {
 				add_political_power = -150
-				country_event = { id = arab_spring.18 }
+				country_event = { id = arab_spring.18 random_days = 7 random_hours = 18 }
 			}
 		}
 
