@@ -10936,18 +10936,15 @@ focus_tree = {
 	focus = {
 		id = VEN_cartel_of_the_suns
 		icon = legalize_it
-		relative_position_id = VEN_cartel_question
+
 		x = -3
 		y = 3
+		relative_position_id = VEN_cartel_question
+
 		cost = 10
 
 		prerequisite = { focus = VEN_pro_government_cartels }
 		prerequisite = { focus = VEN_bribe_schemes }
-
-
-		ai_will_do = {
-			factor = 2
-		}
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus VEN_cartel_of_the_suns"
@@ -10964,6 +10961,9 @@ focus_tree = {
 						ideology = anarchist_communism
 						traits = {
 							emerging_anarchist_communism
+							military_career
+							silent_workhorse
+							populist_president
 						}
 					}
 				}
@@ -10980,6 +10980,10 @@ focus_tree = {
 					elections_allowed = no
 				}
 			}
+		}
+
+		ai_will_do = {
+			base = 2
 		}
 	}
 
