@@ -186,7 +186,7 @@ IRQ_MNF_setup = {
 		create_dynamic_country = {
 			original_tag = IRQ
 			copy_tag = IRQ
-			
+
 			set_country_flag = IRQ_MNF
 			set_cosmetic_tag = IRQ_MNF
 
@@ -376,7 +376,7 @@ syrian_civil_war_setup = {
 						elections_allowed = no
 					}
 				}
-				
+
 				add_to_array = { global.rival_governments = THIS }
 				set_country_flag = rival_government_SYR
 
@@ -436,7 +436,7 @@ syrian_civil_war_setup = {
 					}
 				}
 
-				#FSA will control area around Idlib 
+				#FSA will control area around Idlib
 				#1 if you take Idlib al nusra will break away and border war you for the city
 				#2 they break away via mechanic
 				# a bit of both need to see map changes to see if kal will make idlib it's own city
@@ -467,7 +467,7 @@ syrian_civil_war_setup = {
 					type = civil_war
 				}
 				add_civil_war_target = SYR
-				
+
 				add_named_threat = {
 					threat = 5
 					name = Syrian_Civil_War.threat
@@ -1416,6 +1416,10 @@ calculate_monthly_arab_spring_change = {
 	else_if = {
 		limit = { has_idea = social_05 }
 		add_to_variable = { arab_spring_change = -2 }
+	}
+	else_if = {
+		limit = { has_idea = social_06 }
+		add_to_variable = { arab_spring_change = -3 }
 	}
 
 	# Corruption Increases Arab Spring Likelihood
