@@ -1546,7 +1546,8 @@ trigger_year_2013_events = {
 		country_event = { id = germany_party.0 days = 36 }
 	}
 	USA = {
-		country_event = { id = usa.999 days = 20 } #Election (AI Only)
+		# Election (AI Only)
+		country_event = { id = usa.999 days = 20 }
 	}
 	CAN = {
 		# International Space Station Expedition 35
@@ -1587,6 +1588,10 @@ trigger_year_2013_events = {
 			limit = { has_idea = HOL_beatrix }
 			country_event = { id = HOL_common_event.1 days = 28 }
 		}
+	}
+	VEN = {
+		# Death of Hugo Chavez
+		country_event = { id = venezuela.24 random_days = 130 random_hours = 24 }
 	}
 }
 trigger_year_2014_events = {
