@@ -1,7 +1,5 @@
 set_leader_VEN = {
-
 	if = { limit = { has_country_flag = set_socialism }
-
 		if = { limit = { check_variable = { socialism_leader = 0 } }
 			add_to_variable = { socialism_leader = 1 }
 			hidden_effect = { kill_country_leader = yes }
