@@ -102,6 +102,10 @@ defined_text = {
 		localization_key = AS_impact_of_current_social_unrest_5_tt
 	}
 	text = {
+		trigger = { has_idea = social_06 }
+		localization_key = AS_impact_of_current_social_unrest_6_tt
+	}
+	text = {
 		localization_key = ""
 	}
 }
