@@ -522,7 +522,8 @@ country_event = {
 		}
 	}
 }
-#
+
+# United States Refuses Bases
 country_event = {
 	id = venezuela.23
 	title = venezuela.23.t
@@ -538,6 +539,39 @@ country_event = {
 	}
 }
 
+# Death of Hugo Chávez
+country_event = {
+	id = venezuela.24
+	title = venezuela.24.t
+	desc = venezuela.24.d
+	is_triggered_only = yes
+	trigger = {
+		original_tag = VEN
+		has_country_leader = { name = "Hugo Chávez" ruling_only = yes }
+	}
+
+	# A Hero of the Bolivarian Revolution
+	option = {
+		name = venezuela.24.a
+		log = "[GetDateText]: [This.GetName]: venezuela.24.a executed"
+
+		create_country_leader = {
+			name = "Nicolás Maduro"
+			picture = "Nicolas_Maduro.dds"
+			ideology = anarchist_communism
+			traits = {
+				emerging_anarchist_communism
+				union_man
+				career_politician
+			}
+		}
+
+		ai_chance = {
+			base = 1
+		}
+	}
+}
+
 
 # 2000 Elections
 country_event = {
@@ -545,7 +579,6 @@ country_event = {
 	title = venezuela.100.t
 	desc = venezuela.100.d
 	is_triggered_only = yes
-
 	trigger = {
 		original_tag = VEN
 		emerging_anarchist_communism_in_power_or_coalition = yes
