@@ -799,7 +799,7 @@
  venezuela.8.a: "We will avoid the unnecessary bloodshed!"
  venezuela.8.b: "We will defend the kingdoms rightful sovereignty!"
  venezuela.9.t: "The cession of Curacao"
- venezuela.9.d: "Back in the Netherlands, the proposal sparked intense debates. Some politicians viewed it as a betrayal of Dutch interests, while others saw it as a pragmatic solution to divest from costly overseas territories. Ultimately, the Dutch government decided to pursue negotiations with Venezuela and have agreed to cede the territory to them."
+ venezuela.9.d: "Back in the [HOL.GetNameWithFlag], the proposal sparked intense debates. Some politicians viewed it as a betrayal of Dutch interests, while others saw it as a pragmatic solution to divest from costly overseas territories. Ultimately, the Dutch government decided to pursue negotiations with Venezuela and have agreed to cede the territory to them."
  venezuela.9.a: "The island of Curacao has finally been freed from the Dutch colonial oppressors."
  venezuela.10.t: "The Dutch decline our offer"
  venezuela.10.d: "The Dutch government, committed to protecting its overseas territories and upholding the principles of self-determination, firmly rejected Venezuela's demands. They emphasized that Curaçao's people had chosen their own destiny, and their wishes must be respected. The Dutch military presence on the island was reinforced as a clear message of their commitment."
@@ -841,6 +841,10 @@
  venezuela.23.t: "[USA.GetName] refuses bases"
  venezuela.23.d: "[USA.GetName] has refused our offer of joint military bases."
  venezuela.23.a: "Sadge"
+
+ venezuela.24.t: "The Death of Hugo Chávez"
+ venezuela.24.d: "Vice President Nicolás Maduro announced today that President Hugo Chávez has passed away. According to Maduro, Chávez had been struggling with a 'difficult illness' for several years, while the Head of the Presidential Guard stated that he suffered a massive heart attack. Regardless of the cause, Hugo Chávez is gone, and the vice president will serve as acting president until new elections are held. Maduro is widely regarded as Chávez's hand-picked successor and has set his sights on the presidency. Only time will tell if he will become the next president and follow in the footsteps of his mentor."
+ venezuela.24.a: "A Hero of the Bolivarian Revolution"
 
  venezuela.200.t: "[VEN.GetName] Proposes Trade Deal"
  venezuela.200.d: "Diplomats from [VEN.GetNameWithFlag] have come to use today to discuss the proposal of trade deals with them. It is possible that forming this trade with our two nations will improve relations and economic growth in both of our nations. How should we proceed?"
@@ -1059,6 +1063,7 @@
  populist_president: "Populist President"
  populist_president2: "The People's President"
  economic_managers: "Economic Managers"
+ hand_chosen_successor: "Hand Chosen Successor"
 
  #### Dynamic Modifiers
  VEN_mission_vuelta_al_campo_modifier: "Vuelta Al Campo"
