@@ -1139,6 +1139,7 @@
  AS_impact_of_current_social_unrest_3_tt: "$social_03$ - §R+1§!\n"
  AS_impact_of_current_social_unrest_4_tt: "$social_04$ - §G-1§!\n"
  AS_impact_of_current_social_unrest_5_tt: "$social_05$ - §G-2§!\n"
+ AS_impact_of_current_social_unrest_6_tt: "$social_06$ - §G-3§!\n"
 
  AS_impact_of_economic_situation_depression_tt: "$depression$ & GDP/C Less Than $15000 - §R+6§!\n"
  AS_impact_of_economic_situation_recession_tt: "$recession$ & GDP/C Less Than 15 - §R+4§!\n"
@@ -1234,8 +1235,8 @@
  arab_spring.11.b: "We will never give up power!"
 
  arab_spring.12.t: "Revolution Sweeps Regime from Power in [FROM.GetNameDef]"
- arab_spring.12.d1: "Celebrations have broken out across [FROM.GetNameDef] following the collapse of the outgoing ruler's government. The former dictator has been placed under arrest following the decision by high-profile figures in the [FROM.GetAdjective] security services to side with the opposition.\n\nA caretaker government under [FROM.GetLeader] has taken power until elections are held, but has stressed the temporary nature of its rule. Protests nonetheless continue, as many demand the complete dismantling of the ruling party and the resignation of all its members, as it continues to be closely associated with the outgoing regime."
- arab_spring.12.d2: "Celebrations have broken out across [FROM.GetNameDef] following the collapse of the outgoing ruler's government. The former president has been forced to flee the country, taking refuge in [SAU.GetNameDef].\n\nA caretaker government under [FROM.GetLeader], the Tunisian prime minister, has taken power until elections are held, but has stressed the temporary nature of its rule. Protests nonetheless continue, as many demand the complete dismantling of the ruling party and the resignation of all its members, as it continues to be closely associated with the outgoing regime of Zine el-Abidine Ben Ali."
+ arab_spring.12.d1: "Celebrations have broken out across [FROM.GetNameDef] following the collapse of the outgoing ruler's government. The former dictator has been placed under arrest following the decision by high-profile figures in the [FROM.GetAdjective] security services to side with the opposition.\n\nA caretaker government has taken power until elections are held, but has stressed the temporary nature of its rule. Protests nonetheless continue, as many demand the complete dismantling of the ruling party and the resignation of all its members, as it continues to be closely associated with the outgoing regime."
+ arab_spring.12.d2: "Celebrations have broken out across [FROM.GetNameDef] following the collapse of the outgoing ruler's government. The former president has been forced to flee the country, taking refuge in [SAU.GetNameDef].\n\nA caretaker government under has taken power until elections are held, but has stressed the temporary nature of its rule. Protests nonetheless continue, as many demand the complete dismantling of the ruling party and the resignation of all its members, as it continues to be closely associated with the outgoing regime of Zine el-Abidine Ben Ali."
  arab_spring.12.a: "The people have triumphed!"
  arab_spring.12.b: "A Worrying Development"
  arab_spring.12.c: "Democracy advances..."
