@@ -12,16 +12,20 @@ v1.12.2
   - Fixed an issue where Italy's NIMBYs could suddenly start benefiting the government more than it should
   - Fixed a bug where the Syrian Civil War from the Arab Spring would not unlock the post-civil war focuses for Syria
   - Fixed a bug where China's economic focuses for developing various regions did not accommodate for subjects such as the SARs
+  - Fixed a bug with the Arab Spring mechanic where the "Extensive Welfare State" idea was not properly reducing the Arab Spring change
+  - Introduced a degree of randomness to when the Arab Spring protest events spawn for each nation after the mission timeout so the world doesn't get spammed with events at the same time
 
  Content:
   - Added new decisions for Bolivia to allow them to develop their oil reserves
   - Added "Robert Hanssen" as an operative for the Russians to use with American citizenship
+  - Added an event for Venezuela where Hugo Chavez dies and Nicolás Maduro becomes the president (Requires Hugo Chavez to be in power at the time)
 
  Game Rules:
 
  Graphics:
 
  Localization:
+  - Removed a confusing statement in the Arab Spring events where it mentioned caretaker governments but was using the name of the former leader instead
 
  Map:
 
